--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <div class="row">
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center blue-grey-text"><i class="material-icons">cast</i></h2>
+            <h2 class="center blue-grey-text"><i class="material-icons">network_check</i></h2>
             <h5 class="center">Network statistics</h5>
             <ul>
             	<li>Last access: <span id="lastAccess">12</span> <span> seconds ago</span></li>
